--- a/VDMS/Views/Documents/Index.cshtml
+++ b/VDMS/Views/Documents/Index.cshtml
@@ -1,75 +1,106 @@
 ﻿@model IEnumerable<VDMS.Models.Document>
-
 @{
     ViewBag.Title = "Index";
 }
-
-<h2>Index</h2>
+<h2>Display documents</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Branch.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DocumentType.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DocSerial)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.UserID)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Inbound)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Recipient)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Description)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CreationDate)
-        </th>
-        <th></th>
-    </tr>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <script src="../../Scripts/jquery-1.10.2.min.js" type="text/javascript"></script>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Branch.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DocumentType.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DocSerial)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.UserID)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Inbound)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Recipient)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Description)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CreationDate)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.DocID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.DocID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.DocID })
-        </td>
-    </tr>
-}
+    <style type="text/css">
+        .webGrid {
+            margin: 4px;
+            border-collapse: collapse;
+            width: 100em;
+            background-color: #FFFFFF;
+        }
 
-</table>
+        .header {
+            background-color: #E60000;
+            font-weight: bold;
+            color: #FFFFFF;
+        }
+
+        .webGrid th, .webGrid td {
+            border: 1px solid #C0C0C0;
+            padding: 5px;
+            color: #000;
+        }
+        /*.alt {
+            background-color: #FFFFFF;
+            color: #000;
+        }
+            */
+        .gridHead a:hover {
+            text-decoration: underline;
+        }
+
+        .description {
+            width: auto;
+        }
+
+        .select {
+            background-color: #389DF5;
+        }
+
+        .gridHead {
+            font-weight: bold;
+            color: #FFFFFF;
+        }
+    </style>
+</head>
+<body>
+    @{
+        VDMS.Models.Document document = new VDMS.Models.Document();
+    }
+    @{
+        var grid = new WebGrid(Model, canPage: true, rowsPerPage: 20, selectionFieldName: "selectedRow", ajaxUpdateContainerId: "gridContent");
+        grid.Pager(WebGridPagerModes.NextPrevious);
+
+        var gridColumns = new List<WebGridColumn>();
+        gridColumns.Add(grid.Column("DocSerial", format: (item) => item.GetSelectLink(item.DocSerial)));
+        gridColumns.Add(grid.Column("Branch.Name", "Branch Name"));
+        gridColumns.Add(grid.Column("DocumentType.Name", "Type"));
+        gridColumns.Add(grid.Column("UserID", "Created by"));
+        gridColumns.Add(grid.Column("Inbound", "Inbound"));
+        gridColumns.Add(grid.Column("Recipient", "Recipient"));
+        gridColumns.Add(grid.Column("Description", "Description", style: "description"));
+        gridColumns.Add(grid.Column("CreationDate", "Creation Date", format: (item) => item.CreationDate.ToString("d")));
+        gridColumns.Add(grid.Column(format: (item) => Html.ActionLink("Details", "Details", new
+        {
+            id = item.DocID
+        })));
+        if (true)
+        {
+            gridColumns.Add(grid.Column(format: (item) => Html.ActionLink("Delete", "Delete", new { id = item.DocID })));
+            gridColumns.Add(grid.Column(format: (item) => Html.ActionLink("Edit", "Edit", new { id = item.DocID })));
+        }
+    }
+
+    <div id="gridContent">
+        @grid.GetHtml(tableStyle: "webGrid",
+                       headerStyle: "header",
+                       //alternatingRowStyle: "alt",
+                       selectedRowStyle: "select",
+                       columns: grid.Columns(gridColumns.ToArray()))))
+
+        @if (grid.HasSelection)
+        {
+            document = (VDMS.Models.Document)grid.Rows[grid.SelectedIndex].Value;
+            <b> Branch Name </b> @document.Branch.Name <br />
+            <b> DocTypeID </b> @document.DocTypeID <br />
+            <b> Type </b> @document.DocumentType.Name <br />
+            <b> Description </b> @document.Description <br />
+            <b> UserID </b> @document.UserID <br />
+            <b> Inbound </b> @document.Inbound <br />
+            <b> Recipient </b> @document.Recipient <br />
+            <b> CreationDate </b> @document.CreationDate <br />
+        }
+    </div>
+</body>
+</html>
