--- a/VDMS/Views/UsersAdmin/Edit.cshtml
+++ b/VDMS/Views/UsersAdmin/Edit.cshtml
@@ -9,8 +9,8 @@
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
+
+<div class="form-horizontal">
     <h4>Edit User Form.</h4>
     <hr />
     @Html.ValidationSummary(true)
@@ -22,7 +22,18 @@
             @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
             @Html.ValidationMessageFor(model => model.Email)
         </div>
-    </div>   
+    </div>
+    <div class="form-group">
+        <div class="checkbox">
+            @Html.LabelFor(model => model.EmailConfirmed, new { @class = "control-label col-md-2" })
+            <div class="col-md-2">
+                @Html.CheckBoxFor(m => m.EmailConfirmed)
+            </div>
+
+        </div>
+    </div>
+
+
     <div class="form-group">
         @Html.Label("Roles", new { @class = "control-label col-md-2" })
         <span class=" col-md-10">
