--- a/VDMS/Views/UsersAdmin/Edit.cshtml
+++ b/VDMS/Views/UsersAdmin/Edit.cshtml
@@ -27,13 +27,11 @@
         <div class="checkbox">
             @Html.LabelFor(model => model.EmailConfirmed, new { @class = "control-label col-md-2" })
             <div class="col-md-2">
-                @Html.CheckBoxFor(m => m.EmailConfirmed)
+                @Html.CheckBoxFor(m => m.EmailConfirmed, new { @checked = "checked"})
             </div>
 
         </div>
     </div>
-
-
     <div class="form-group">
         @Html.Label("Roles", new { @class = "control-label col-md-2" })
         <span class=" col-md-10">
