--- a/VDMS/Content/bootstrap.css
+++ b/VDMS/Content/bootstrap.css
@@ -21,6 +21,10 @@
 
 /*! normalize.css v2.1.0 | MIT License | git.io/normalize */
 
+
+a,li,ul,p,span,input,label,div,table {
+	font-family : sans-serif !important;
+}
 article,
 aside,
 details,
@@ -341,7 +345,7 @@ a {
 
 a:hover,
 a:focus {
-  color: #2a6496;
+  color: #CD0000;
   text-decoration: underline;
 }
 
@@ -926,7 +930,7 @@ pre code {
 
 @media (min-width: 768px) {
   .container {
-    max-width: 750px;
+    max-width: 85%;
   }
   .col-sm-1,
   .col-sm-2,
@@ -1405,7 +1409,7 @@ pre code {
 }
 
 table {
-  max-width: 100%;
+  
   background-color: transparent;
 }
 
@@ -6809,3 +6813,43 @@ td.visible-print {
 .nav > li:hover {
 	background-color: #CD0000;
     }
+
+
+
+    @media (max-width: 992px) {
+    .navbar-header {
+        float: none;
+    }
+    .navbar-toggle {
+        display: block;
+    }
+    .navbar-collapse {
+        border-top: 1px solid transparent;
+        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+    }
+    .navbar-collapse.collapse {
+        display: none!important;
+    }
+    .navbar-nav {
+        float: none!important;
+        margin: 7.5px -15px;
+    }
+    .navbar-nav>li {
+        float: none;
+    }
+    .navbar-nav>li>a {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+    .navbar-text {
+        float: none;
+        margin: 15px 0;
+    }
+    /* since 3.1.0 */
+    .navbar-collapse.collapse.in { 
+        display: block!important;
+    }
+    .collapsing {
+        overflow: hidden!important;
+    }
+}
