--- a/VDMS/Views/Documents/Index.cshtml
+++ b/VDMS/Views/Documents/Index.cshtml
@@ -14,48 +14,9 @@
 <html lang="en">
 <head>
     <script src="../../Scripts/jquery-1.10.2.min.js" type="text/javascript"></script>
+    
 
-    <style type="text/css">
-        .webGrid {
-            margin: 4px;
-            border-collapse: collapse;
-            width: 100em;
-            background-color: #FFFFFF;
-        }
-
-        .header {
-            background-color: #E60000;
-            font-weight: bold;
-            color: #FFFFFF;
-        }
-
-        .webGrid th, .webGrid td {
-            border: 1px solid #C0C0C0;
-            padding: 5px;
-            color: #000;
-        }
-        /*.alt {
-                background-color: #FFFFFF;
-                color: #000;
-            }
-                */
-        .gridHead a:hover {
-            text-decoration: underline;
-        }
-
-        .description {
-            width: auto;
-        }
-
-        .select {
-            background-color: #389DF5;
-        }
-
-        .gridHead {
-            font-weight: bold;
-            color: #FFFFFF;
-        }
-    </style>
+    
 </head>
 <body>
     @{
@@ -86,7 +47,7 @@
     }
 
     <div id="gridContent">
-        @grid.GetHtml(tableStyle: "webGrid",
+        @grid.GetHtml(tableStyle: "vdf-doc",
                        headerStyle: "header",
                        //alternatingRowStyle: "alt",
                        selectedRowStyle: "select",
