--- a/VDMS/Views/Documents/Index.cshtml
+++ b/VDMS/Views/Documents/Index.cshtml
@@ -47,7 +47,7 @@
     }
 
     <div id="gridContent">
-        @grid.GetHtml(tableStyle: "vdf-doc",
+        @grid.GetHtml(tableStyle: "vdf-doc table-responsive",
                        headerStyle: "header",
                        //alternatingRowStyle: "alt",
                        selectedRowStyle: "select",
