Fixed UserLog. Changed OperationType to varchar(30). Delete User option available only to MBB role.

--- a/VDMS/Views/UsersAdmin/Index.cshtml
+++ b/VDMS/Views/UsersAdmin/Index.cshtml
@@ -24,8 +24,9 @@
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+            @Html.ActionLink("Details", "Details", new { id=item.Id }) 
+            @if (Request.IsAuthenticated && User.IsInRole("MBB Developer")){                     
+            @Html.ActionLink("| Delete", "Delete", new { id=item.Id })}
         </td>
     </tr>
 }
