--- a/VDMS/Views/Shared/_Layout.cshtml
+++ b/VDMS/Views/Shared/_Layout.cshtml
@@ -1,19 +1,29 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - VOID</title>
+
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+
+    <!-- jQuery UI CSS Reference -->
+  @*  <link href="@Url.Content("~/Content/themes/base/minified/jquery-ui.min.css")" rel="stylesheet" />*@
+    <link href="@Url.Content("~/Content/themes/base/all.css")" rel="stylesheet" />
+    <!-- Required jQuery and jQuery UI Javascript references -->
+    <script src="@Url.Content("~/Scripts/jquery-1.10.2.min.js")"></script>
+    <script src="@Url.Content("~/Scripts/jquery-ui-1.11.4.min.js")"></script>
+
+
+
 </head>
 <body>
     <div class="container vdf-header-container">
         <img src="~/logo.png" class="img-responsive vdf-logo" />
         <span class="vdf-brand-text">Vodafone Outbound Inbound Docs</span>
     </div>
-    </div>
+
     <div class="navbar navbar-inverse ">
         <div class="container vdf-menu-container">
             <div class="navbar-header">
@@ -28,17 +38,21 @@
                 <ul class="nav navbar-nav">
 
                     <li id="vdf-home">@Html.ActionLink(" ", "Index", "Documents")</li>
-                    @if ((Request.IsAuthenticated) && (User.IsInRole("HelpDesk") || (User.IsInRole("MBB Developer")))){
-                    <li>@Html.ActionLink("User Management","Index","UsersAdmin")</li>
-                    }
-                    @if (Request.IsAuthenticated && User.IsInRole("MBB Developer")){
-                    <li>@Html.ActionLink("Roles Management","Index","RolesAdmin")</li>
-                    }
-                    @if ((Request.IsAuthenticated) && (User.IsInRole("HelpDesk") || (User.IsInRole("MBB Developer")))){
-                    <li>@Html.ActionLink("Branches","Index","Branches")</li>
-                    <li>@Html.ActionLink("Document Types","Index","DocumentTypes")</li>
-                    }
+                    <li>@Html.ActionLink("Report", "Reports", "Documents")</li>
 
+                    @if ((Request.IsAuthenticated) && (User.IsInRole("HelpDesk") || (User.IsInRole("MBB Developer"))))
+                    {
+                        <li>@Html.ActionLink("User Management", "Index", "UsersAdmin")</li>
+                    }
+                    @if (Request.IsAuthenticated && User.IsInRole("MBB Developer"))
+                    {
+                        <li>@Html.ActionLink("Roles Management", "Index", "RolesAdmin")</li>
+                    }
+                    @if ((Request.IsAuthenticated) && (User.IsInRole("HelpDesk") || (User.IsInRole("MBB Developer"))))
+                    {
+                        <li>@Html.ActionLink("Branches", "Index", "Branches")</li>
+                        <li>@Html.ActionLink("Document Types", "Index", "DocumentTypes")</li>
+                    }
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
@@ -52,7 +66,7 @@
         </footer>
     </div>
 
-    @Scripts.Render("~/bundles/jquery")
+    @*@Scripts.Render("~/bundles/jquery")*@
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
 </body>
