Replaced tables in Index pages with WebGrids, changed page names from Index to corresponding name

--- a/VDMS/Views/Documents/Index.cshtml
+++ b/VDMS/Views/Documents/Index.cshtml
@@ -1,8 +1,8 @@
 ﻿@model IEnumerable<VDMS.Models.Document>
     @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Documents";
     }
-    <h2>Display documents</h2>
+    <h2>Documents</h2>
 
     <p>
         @if (User.Identity.IsAuthenticated && (User.IsInRole("Admin") || (User.IsInRole("MBB Developer") || (User.IsInRole("User")))))
