--- a/VDMS/Views/Branches/Index.cshtml
+++ b/VDMS/Views/Branches/Index.cshtml
@@ -1,39 +1,40 @@
 ﻿@model IEnumerable<VDMS.Models.Branch>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Branches";
 }
 
-<h2>Index</h2>
+<h2>Branches</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Address)
-        </th>
-        <th></th>
-    </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Address)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.BranchID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.BranchID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.BranchID })
-        </td>
-    </tr>
-}
+<body>
+    @{
+        var grid = new WebGrid(Model, canPage: true, rowsPerPage: 20, selectionFieldName: "selectedRow", ajaxUpdateContainerId: "gridContent");
+        grid.Pager(WebGridPagerModes.NextPrevious);
 
-</table>
+        var gridColumns = new List<WebGridColumn>();
+        gridColumns.Add(grid.Column("Name", "Name"));
+        gridColumns.Add(grid.Column("Address", "Address"));
+        gridColumns.Add(grid.Column(format: (item) => Html.ActionLink("Details", "Details", new
+        {
+            id = item.BranchID
+        })));
+        if (User.Identity.IsAuthenticated && (User.IsInRole("Admin") || (User.IsInRole("MBB Developer"))))
+        {
+            gridColumns.Add(grid.Column(format: (item) => Html.ActionLink("Delete", "Delete", new { id = item.BranchID })));
+            gridColumns.Add(grid.Column(format: (item) => Html.ActionLink("Edit", "Edit", new { id = item.BranchID })));
+        }
+    }
+
+    <div id="gridContent">
+        @grid.GetHtml(tableStyle: "vdf-doc table-responsive",
+                headerStyle: "header",
+                //alternatingRowStyle: "alt",
+                selectedRowStyle: "select",
+                columns: grid.Columns(gridColumns.ToArray()))
+    </div>
+</body>
+
