--- a/VDMS/Views/DocumentTypes/Index.cshtml
+++ b/VDMS/Views/DocumentTypes/Index.cshtml
@@ -1,39 +1,39 @@
 ﻿@model IEnumerable<VDMS.Models.DocumentType>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Document Types";
 }
 
-<h2>Index</h2>
+<h2>Document Types</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Serial)
-        </th>
-        <th></th>
-    </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Serial)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.DocTypeID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.DocTypeID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.DocTypeID })
-        </td>
-    </tr>
-}
+<body>
+    @{
+        var grid = new WebGrid(Model, canPage: true, rowsPerPage: 20, selectionFieldName: "selectedRow", ajaxUpdateContainerId: "gridContent");
+        grid.Pager(WebGridPagerModes.NextPrevious);
 
-</table>
+        var gridColumns = new List<WebGridColumn>();
+        gridColumns.Add(grid.Column("Name", "Name"));
+        gridColumns.Add(grid.Column("Serial", "Serial"));
+        gridColumns.Add(grid.Column(format: (item) => Html.ActionLink("Details", "Details", new
+        {
+            id = item.DocTypeID
+        })));
+        if (User.Identity.IsAuthenticated && (User.IsInRole("Admin") || (User.IsInRole("MBB Developer"))))
+        {
+            gridColumns.Add(grid.Column(format: (item) => Html.ActionLink("Delete", "Delete", new { id = item.DocTypeID })));
+            gridColumns.Add(grid.Column(format: (item) => Html.ActionLink("Edit", "Edit", new { id = item.DocTypeID })));
+        }
+    }
+
+    <div id="gridContent">
+        @grid.GetHtml(tableStyle: "vdf-doc table-responsive",
+                headerStyle: "header",
+                //alternatingRowStyle: "alt",
+                selectedRowStyle: "select",
+                columns: grid.Columns(gridColumns.ToArray()))
+    </div>
+</body>
