--- a/VDMS/Views/Roles/Index.cshtml
+++ b/VDMS/Views/Roles/Index.cshtml
@@ -1,33 +1,36 @@
-﻿@model IEnumerable<Microsoft.AspNet.Identity.EntityFramework.IdentityRole>                 
+﻿@model IEnumerable<Microsoft.AspNet.Identity.EntityFramework.IdentityRole>
 
-                          @{
-                          ViewBag.Title = "Index";
-                          }
+@{
+    ViewBag.Title = "Roles";
+}
 
-                          <h2>Index</h2>
+<h2>Roles</h2>
 
-                          <p>
-                              @Html.ActionLink("Create New", "Create")
-                          </p>
-                          <table class="table">
-                              <tr>
-                                  <th>
-                                      @Html.DisplayNameFor(model => model.Name)
-                                  </th>                                  
-                                  <th></th>
-                              </tr>
+<p>
+    @Html.ActionLink("Create New", "Create")
+</p>
 
-                              @foreach (var item in Model) {
-                              <tr>
-                                  <td>
-                                      @Html.DisplayFor(modelItem => item.Name)
-                                  </td>                                  
-                                  <td>
-                                      @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |                                      
-                                      @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-                                  </td>
-                              </tr>
-                              }
+<body>
+    @{
+        var grid = new WebGrid(Model, canPage: true, rowsPerPage: 20, selectionFieldName: "selectedRow", ajaxUpdateContainerId: "gridContent");
+        grid.Pager(WebGridPagerModes.NextPrevious);
 
-                          </table>
+        var gridColumns = new List<WebGridColumn>();
+        gridColumns.Add(grid.Column("Name", "Name"));
+        if (User.Identity.IsAuthenticated && (User.IsInRole("Admin") || (User.IsInRole("MBB Developer"))))
+        {
+            gridColumns.Add(grid.Column(format: (item) => Html.ActionLink("Delete", "Delete", new { id = item.Id })));
+            gridColumns.Add(grid.Column(format: (item) => Html.ActionLink("Edit", "Edit", new { id = item.Id })));
+        }
+    }
+
+    <div id="gridContent">
+        @grid.GetHtml(tableStyle: "vdf-doc table-responsive",
+                headerStyle: "header",
+                //alternatingRowStyle: "alt",
+                selectedRowStyle: "select",
+                columns: grid.Columns(gridColumns.ToArray()))
+    </div>
+</body>
+
 
