--- a/VDMS/Views/UsersAdmin/Index.cshtml
+++ b/VDMS/Views/UsersAdmin/Index.cshtml
@@ -21,7 +21,7 @@
         {
             id = item.Id
         })));
-        if (User.Identity.IsAuthenticated && (User.IsInRole("Admin") || (User.IsInRole("MBB Developer"))))
+        if (User.Identity.IsAuthenticated && (User.IsInRole("HelpDesk") || (User.IsInRole("MBB Developer"))))
         {
             gridColumns.Add(grid.Column(format: (item) => Html.ActionLink("Delete", "Delete", new { id = item.Id })));
             gridColumns.Add(grid.Column(format: (item) => Html.ActionLink("Edit", "Edit", new { id = item.Id })));
