Fixed  tab index focus

--- a/VDMS/Content/bootstrap.css
+++ b/VDMS/Content/bootstrap.css
@@ -2023,7 +2023,7 @@ textarea.input-lg {
 
 .btn:hover,
 .btn:focus {
-  color: #FFF;
+  
   text-decoration: none;
 }
 
@@ -2261,7 +2261,7 @@ fieldset[disabled] .btn-success.active {
 .btn-info:active,
 .btn-info.active,
 .open .dropdown-toggle.btn-info {
-  color: #ffffff;
+ 
   background-color: #39b3d7;
   border-color: #269abc;
 }
@@ -3821,7 +3821,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 .nav > li > a:hover,
 .nav > li > a:focus {
   text-decoration: none;
-  background-color: #eeeeee;
+  background-color: transparent !important;
 }
 
 .nav > li.disabled > a {
@@ -3879,7 +3879,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 .nav-tabs > li.active > a:focus {
   color: #555555;
   cursor: default;
-  background-color: #ffffff;
+  background-color: #CD0000;
   border: 1px solid #dddddd;
   border-bottom-color: transparent;
 }
