--- a/VDMS/Views/Documents/Reports.cshtml
+++ b/VDMS/Views/Documents/Reports.cshtml
@@ -1,6 +1,9 @@
 ﻿@model IEnumerable<VDMS.Models.Document>
 @{
     ViewBag.Title = "Reports";
+
+    VDMS.Models.Document document = new VDMS.Models.Document();
+    var grid = new WebGrid(source: Model, canPage: false, canSort: false);
 }
 
 <h2>Reports</h2>
@@ -16,26 +19,6 @@
 </head>
 
 <body>
-
-    @{
-        VDMS.Models.Document document = new VDMS.Models.Document();
-    }
-    @{
-        var grid = new WebGrid(Model, canPage: true, rowsPerPage: 20, selectionFieldName: "selectedRow", ajaxUpdateContainerId: "gridContent", canSort:false);
-        grid.Pager(WebGridPagerModes.NextPrevious);
-
-        var gridColumns = new List<WebGridColumn>();
-        gridColumns.Add(grid.Column("DocSerial", "DocSerial"));
-        gridColumns.Add(grid.Column("Branch.Name", "Branch Name"));
-        gridColumns.Add(grid.Column("DocumentType.Name", "Type"));
-        gridColumns.Add(grid.Column("UserName", "Created by"));
-        gridColumns.Add(grid.Column("Inbound", "Inbound"));
-        gridColumns.Add(grid.Column("Recipient", "Recipient"));
-        gridColumns.Add(grid.Column("Description", "Description", style: "description"));
-        gridColumns.Add(grid.Column("CreationDate", "Creation Date"));
-    }
-
-
     @using (Html.BeginForm())
     {
         @Html.AntiForgeryToken();
@@ -61,7 +44,6 @@
                 @Html.LabelFor(model => document.DocTypeID, "DocTypeID", htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
                     @Html.DropDownList("DocTypeID", null, "Select Document", htmlAttributes: new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => document.DocTypeID, "", new { @class = "text-danger" })
                     @Html.HiddenFor(model => document.DocTypeID)
                 </div>
             </div>
@@ -69,7 +51,6 @@
                 @Html.LabelFor(model => document.BranchID, "BranchID", htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
                     @Html.DropDownList("BranchID", null, "Select Branch", htmlAttributes: new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => document.BranchID, "", new { @class = "text-danger" })
                     @Html.HiddenFor(model => document.BranchID)
                 </div>
             </div>
@@ -77,7 +58,6 @@
                 @Html.Label("Created by", htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
                     @Html.DropDownList("UserID", null, "Select Creator", htmlAttributes: new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.FirstOrDefault().UserID, "", new { @class = "text-danger" })
                 </div>
             </div>
 
@@ -100,16 +80,27 @@
             </div>
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Generate" class="btn btn-default" />
+                    <input type="submit" name="submit" value="Preview" class="btn btn-default" />
+                    &nbsp;  &nbsp;
+                    @Html.ActionLink("Export to Excel", "GetExcel", "Documents", new { @inbound = true }, null) @*!!don't delete the null from the ActionLink params*@
                 </div>
             </div>
-        </div>
+            <br /><br />
+            <div id="gridContent">
+                @grid.GetHtml(tableStyle: "vdf-doc table-responsive",
+                 headerStyle: "header",
+                 selectedRowStyle: "select",
+                 columns: grid.Columns(
+                         grid.Column("DocSerial", "DocSerial"),
+                         grid.Column("Branch.Name", "Branch Name"),
+                         grid.Column("DocumentType.Name", "Type"),
+                         grid.Column("UserName", "Created by"),
+                         grid.Column("Inbound", "Inbound"),
+                         grid.Column("Recipient", "Recipient"),
+                         grid.Column("Description", "Description"),
+                         grid.Column("CreationDate", "Creation Date")))
+            </div>
 
-        <div id="gridContent">
-            @grid.GetHtml(tableStyle: "vdf-doc table-responsive",
-                headerStyle: "header",
-                selectedRowStyle: "select",
-                columns: grid.Columns(gridColumns.ToArray()))
         </div>
     }
 </body>
